Pruebas unitarias módulo de notificaciones.